--- a/data/db_setup.ipynb
+++ b/data/db_setup.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#put in the string i sent over here\n",
-    "ATLAS_URI = "
+    "ATLAS_URI = \"mongodb+srv://nyumongo:nyumongo@cluster0.tolqi.mongodb.net/ProjectsinProgramming?retryWrites=true&w=majority\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +108,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>_id</th>\n",
+       "      <th>key</th>\n",
        "      <th>fare_amount</th>\n",
        "      <th>pickup_datetime</th>\n",
        "      <th>passenger_count</th>\n",
@@ -117,7 +118,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>607f4b702e3d00277160f276</td>\n",
+       "      <td>608328c055a7bf9dfb58cd9a</td>\n",
+       "      <td>2009-06-15 17:26:21.0000001</td>\n",
        "      <td>4.5</td>\n",
        "      <td>2009-06-15 17:26:21</td>\n",
        "      <td>1</td>\n",
@@ -125,7 +127,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>607f4b702e3d00277160f277</td>\n",
+       "      <td>608328c055a7bf9dfb58cd9b</td>\n",
+       "      <td>2010-01-05 16:52:16.0000002</td>\n",
        "      <td>16.9</td>\n",
        "      <td>2010-01-05 16:52:16</td>\n",
        "      <td>1</td>\n",
@@ -133,7 +136,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>607f4b702e3d00277160f278</td>\n",
+       "      <td>608328c055a7bf9dfb58cd9c</td>\n",
+       "      <td>2011-08-18 00:35:00.00000049</td>\n",
        "      <td>5.7</td>\n",
        "      <td>2011-08-18 00:35:00</td>\n",
        "      <td>2</td>\n",
@@ -141,7 +145,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>607f4b702e3d00277160f279</td>\n",
+       "      <td>608328c055a7bf9dfb58cd9d</td>\n",
+       "      <td>2012-04-21 04:30:42.0000001</td>\n",
        "      <td>7.7</td>\n",
        "      <td>2012-04-21 04:30:42</td>\n",
        "      <td>1</td>\n",
@@ -149,7 +154,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>607f4b702e3d00277160f27a</td>\n",
+       "      <td>608328c055a7bf9dfb58cd9e</td>\n",
+       "      <td>2010-03-09 07:51:00.000000135</td>\n",
        "      <td>5.3</td>\n",
        "      <td>2010-03-09 07:51:00</td>\n",
        "      <td>1</td>\n",
@@ -162,10 +168,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>693065</th>\n",
-       "      <td>607f4df12e3d0027716b85bf</td>\n",
+       "      <td>60832b2355a7bf9dfb6360e3</td>\n",
+       "      <td>2010-02-12 12:03:21.0000003</td>\n",
        "      <td>9.7</td>\n",
        "      <td>2010-02-12 12:03:21</td>\n",
        "      <td>1</td>\n",
@@ -173,7 +181,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>693066</th>\n",
-       "      <td>607f4df12e3d0027716b85c0</td>\n",
+       "      <td>60832b2355a7bf9dfb6360e4</td>\n",
+       "      <td>2011-07-22 11:46:20.0000002</td>\n",
        "      <td>23.7</td>\n",
        "      <td>2011-07-22 11:46:20</td>\n",
        "      <td>4</td>\n",
@@ -181,7 +190,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>693067</th>\n",
-       "      <td>607f4df12e3d0027716b85c1</td>\n",
+       "      <td>60832b2355a7bf9dfb6360e5</td>\n",
+       "      <td>2011-09-07 10:29:16.0000002</td>\n",
        "      <td>4.5</td>\n",
        "      <td>2011-09-07 10:29:16</td>\n",
        "      <td>1</td>\n",
@@ -189,7 +199,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>693068</th>\n",
-       "      <td>607f4df12e3d0027716b85c2</td>\n",
+       "      <td>60832b2355a7bf9dfb6360e6</td>\n",
+       "      <td>2009-10-12 12:58:42.0000003</td>\n",
        "      <td>6.5</td>\n",
        "      <td>2009-10-12 12:58:42</td>\n",
        "      <td>1</td>\n",
@@ -197,7 +208,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>693069</th>\n",
-       "      <td>607f4df12e3d0027716b85c3</td>\n",
+       "      <td>60832b2355a7bf9dfb6360e7</td>\n",
+       "      <td>2009-10-18 18:45:42.0000001</td>\n",
        "      <td>6.9</td>\n",
        "      <td>2009-10-18 18:45:42</td>\n",
        "      <td>1</td>\n",
@@ -205,40 +217,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>693070 rows × 5 columns</p>\n",
+       "<p>693070 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             _id  fare_amount     pickup_datetime  \\\n",
-       "0       607f4b702e3d00277160f276          4.5 2009-06-15 17:26:21   \n",
-       "1       607f4b702e3d00277160f277         16.9 2010-01-05 16:52:16   \n",
-       "2       607f4b702e3d00277160f278          5.7 2011-08-18 00:35:00   \n",
-       "3       607f4b702e3d00277160f279          7.7 2012-04-21 04:30:42   \n",
-       "4       607f4b702e3d00277160f27a          5.3 2010-03-09 07:51:00   \n",
-       "...                          ...          ...                 ...   \n",
-       "693065  607f4df12e3d0027716b85bf          9.7 2010-02-12 12:03:21   \n",
-       "693066  607f4df12e3d0027716b85c0         23.7 2011-07-22 11:46:20   \n",
-       "693067  607f4df12e3d0027716b85c1          4.5 2011-09-07 10:29:16   \n",
-       "693068  607f4df12e3d0027716b85c2          6.5 2009-10-12 12:58:42   \n",
-       "693069  607f4df12e3d0027716b85c3          6.9 2009-10-18 18:45:42   \n",
+       "                             _id                            key  fare_amount  \\\n",
+       "0       608328c055a7bf9dfb58cd9a    2009-06-15 17:26:21.0000001          4.5   \n",
+       "1       608328c055a7bf9dfb58cd9b    2010-01-05 16:52:16.0000002         16.9   \n",
+       "2       608328c055a7bf9dfb58cd9c   2011-08-18 00:35:00.00000049          5.7   \n",
+       "3       608328c055a7bf9dfb58cd9d    2012-04-21 04:30:42.0000001          7.7   \n",
+       "4       608328c055a7bf9dfb58cd9e  2010-03-09 07:51:00.000000135          5.3   \n",
+       "...                          ...                            ...          ...   \n",
+       "693065  60832b2355a7bf9dfb6360e3    2010-02-12 12:03:21.0000003          9.7   \n",
+       "693066  60832b2355a7bf9dfb6360e4    2011-07-22 11:46:20.0000002         23.7   \n",
+       "693067  60832b2355a7bf9dfb6360e5    2011-09-07 10:29:16.0000002          4.5   \n",
+       "693068  60832b2355a7bf9dfb6360e6    2009-10-12 12:58:42.0000003          6.5   \n",
+       "693069  60832b2355a7bf9dfb6360e7    2009-10-18 18:45:42.0000001          6.9   \n",
        "\n",
-       "        passenger_count  distance  \n",
-       "0                     1      1.03  \n",
-       "1                     1      8.45  \n",
-       "2                     2      1.39  \n",
-       "3                     1      2.80  \n",
-       "4                     1      2.00  \n",
-       "...                 ...       ...  \n",
-       "693065                1      3.23  \n",
-       "693066                4     12.73  \n",
-       "693067                1      0.32  \n",
-       "693068                1      2.27  \n",
-       "693069                1      1.50  \n",
+       "           pickup_datetime  passenger_count  distance  \n",
+       "0      2009-06-15 17:26:21                1      1.03  \n",
+       "1      2010-01-05 16:52:16                1      8.45  \n",
+       "2      2011-08-18 00:35:00                2      1.39  \n",
+       "3      2012-04-21 04:30:42                1      2.80  \n",
+       "4      2010-03-09 07:51:00                1      2.00  \n",
+       "...                    ...              ...       ...  \n",
+       "693065 2010-02-12 12:03:21                1      3.23  \n",
+       "693066 2011-07-22 11:46:20                4     12.73  \n",
+       "693067 2011-09-07 10:29:16                1      0.32  \n",
+       "693068 2009-10-12 12:58:42                1      2.27  \n",
+       "693069 2009-10-18 18:45:42                1      1.50  \n",
        "\n",
-       "[693070 rows x 5 columns]"
+       "[693070 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +523,7 @@
        "[379361 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +783,7 @@
        "[302639 rows x 11 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,6 +791,13 @@
    "source": [
     "lyft_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
