--- a/preprocess/preprocess.ipynb
+++ b/preprocess/preprocess.ipynb
@@ -19,6 +19,7 @@
    "outputs": [],
    "source": [
     "nyc_taxi = pd.read_csv('nyc_taxi.csv')\n",
+    "nyc_taxi_test = pd.read_csv('nyc_taxi_test.csv')\n",
     "others = pd.read_csv('cab_rides.csv')"
    ]
   },
@@ -59,34 +60,34 @@
    "outputs": [],
    "source": [
     "def convertEpochToRegular(epoch):\n",
-    "    return time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(epoch))\n",
+    "    return time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(epoch/1000))\n",
     "\n",
     "others['time_stamp'] = others['time_stamp'].map(convertEpochToRegular)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50874-04-17 16:09:11    56\n",
-       "50878-08-07 13:33:10    51\n",
-       "50873-08-08 14:07:58    42\n",
-       "50872-11-29 12:09:39    42\n",
-       "50874-04-15 14:13:58    42\n",
-       "                        ..\n",
-       "50921-02-19 01:24:43     1\n",
-       "50880-05-14 09:36:24     1\n",
-       "50921-03-25 17:14:37     1\n",
-       "50889-03-16 18:01:50     1\n",
-       "50879-05-22 01:32:15     1\n",
-       "Name: time_stamp, Length: 114335, dtype: int64"
+       "2018-11-27 03:21:14    156\n",
+       "2018-11-28 22:11:08    156\n",
+       "2018-11-29 06:47:08    156\n",
+       "2018-11-29 06:29:08    156\n",
+       "2018-11-27 03:39:14    156\n",
+       "                      ... \n",
+       "2018-12-02 16:03:04      6\n",
+       "2018-12-16 16:55:06      4\n",
+       "2018-11-28 13:32:17      3\n",
+       "2018-11-30 17:17:58      1\n",
+       "2018-12-13 19:10:13      1\n",
+       "Name: time_stamp, Length: 31350, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,12 +148,10 @@
        "dropoff_longitude    float64\n",
        "dropoff_latitude     float64\n",
        "passenger_count        int64\n",
-       "combined              object\n",
-       "distance             float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,25 +162,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyc_taxi['combined'] = nyc_taxi[['pickup_latitude', 'pickup_longitude', 'dropoff_latitude', 'dropoff_longitude']].values.tolist()"
+    "nyc_taxi['combined'] = nyc_taxi[['pickup_latitude', 'pickup_longitude', 'dropoff_latitude', 'dropoff_longitude']].values.tolist()\n",
+    "nyc_taxi_test['combined'] = nyc_taxi_test[['pickup_latitude', 'pickup_longitude', 'dropoff_latitude', 'dropoff_longitude']].values.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyc_taxi['distance'] = nyc_taxi['combined'].map(getDistance)"
+    "nyc_taxi['distance'] = nyc_taxi['combined'].map(getDistance)\n",
+    "nyc_taxi_test['distance'] = nyc_taxi_test['combined'].map(getDistance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
        "Name: distance, Length: 693070, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,11 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "nyc_taxi.to_csv('nyc_taxi_processed.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyc_taxi_test.to_csv('nyc_taxi_test_processed.csv', index=False)"
    ]
   },
   {
