--- a/data/xgboost.ipynb
+++ b/data/xgboost.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ATLAS_URI = \"mongodb+srv://nyumongo:nyumongo@cluster0.tolqi.mongodb.net/ProjectsinProgramming?retryWrites=true&w=majority\""
+    "ATLAS_URI =
    ]
   },
   {
