xgboost nb fixed

--- a/data/xgboost.ipynb
+++ b/data/xgboost.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ATLAS_URI =
+    "ATLAS_URL = \"\" #remove ATLAS URI before committing"
    ]
   },
   {
