--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df.groupby(taxi[‘date'].dt.to_period('M')).sum()\n",
+    "df1 = df.groupby(taxi['date'].dt.to_period('M')).sum()\n",
     "df1 = df1.resample('M').asfreq().fillna(0)\n",
     "df1.plot(kind='bar')"
    ]
