added info modal

--- a/data/xgboost.ipynb
+++ b/data/xgboost.ipynb
@@ -1440,6 +1440,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost for Uber Surge Multiplier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
